--- a/B20 Ex05 Or 316307446 Amit 316603505/MemoryGame/MemoryGame.csproj
+++ b/B20 Ex05 Or 316307446 Amit 316603505/MemoryGame/MemoryGame.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C8DF6680-C0DD-46F5-821A-0AB875C88BE8}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>UIManager</RootNamespace>
-    <AssemblyName>UIManager</AssemblyName>
+    <ProjectGuid>{18B0421A-5AED-40D6-9273-8AA21DB488C3}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <RootNamespace>MemoryGame</RootNamespace>
+    <AssemblyName>MemoryGame</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -36,29 +36,31 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Program.cs" />
-    <Compile Include="Settings.cs">
-      <SubType>Form</SubType>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
+    <Reference Include="Ex02.ConsoleUtils">
+      <HintPath>..\Ex02.ConsoleUtils.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Settings.resx">
-      <DependentUpon>Settings.cs</DependentUpon>
-    </EmbeddedResource>
+    <Compile Include="BoardGame.cs" />
+    <Compile Include="ComputerManager.cs" />
+    <Compile Include="GameManager.cs" />
+    <Compile Include="InputManager.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpottedLetters.cs" />
+    <Compile Include="Square.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MemoryGame\MemoryGame.csproj">
-      <Project>{18b0421a-5aed-40d6-9273-8aa21db488c3}</Project>
-      <Name>MemoryGame</Name>
-    </ProjectReference>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
