--- a/B20 Ex05 Or 316307446 Amit 316603505/MemoryGame/MemoryGame.csproj
+++ b/B20 Ex05 Or 316307446 Amit 316603505/MemoryGame/MemoryGame.csproj
@@ -37,7 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Ex02.ConsoleUtils">
-      <HintPath>..\Ex02.ConsoleUtils.dll</HintPath>
+      <HintPath>..\..\..\..\..\Desktop\עמית לימודים\C#\DN_IDC_2020B_Ex02\Ex02.ConsoleUtils.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
