--- a/B20 Ex05 Or 316307446 Amit 316603505/UIManager/UIManager.csproj
+++ b/B20 Ex05 Or 316307446 Amit 316603505/UIManager/UIManager.csproj
@@ -39,7 +39,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BoardGame.cs" />
+    <Compile Include="BoardGameWindows.cs" />
     <Compile Include="HandleSettings.cs">
       <SubType>Form</SubType>
     </Compile>
