--- a/B20 Ex05 Or 316307446 Amit 316603505/UIManager/UIManager.csproj
+++ b/B20 Ex05 Or 316307446 Amit 316603505/UIManager/UIManager.csproj
@@ -40,14 +40,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoardGameWindows.cs" />
-    <Compile Include="HandleSettings.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="MemoryGameWindows.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MemoryGameButton.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="NewMemoryGameWindows.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewMemoryGameWindows.Designer.cs">
+      <DependentUpon>NewMemoryGameWindows.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Settings.cs">
@@ -55,9 +58,6 @@
     </Compile>
     <Compile Include="Settings.Designer.cs">
       <DependentUpon>Settings.cs</DependentUpon>
-    </Compile>
-    <Compile Include="SettingsOld.cs">
-      <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -73,9 +73,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SettingsOld.resx">
-      <DependentUpon>SettingsOld.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
